
project( test.md_parser )

find_package( Qt5 COMPONENTS Core REQUIRED )

if( ENABLE_COVERAGE )
	set( CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/../../../cmake )
    include( Coveralls )
    coveralls_turn_on_coverage()
endif()

set( SRC main.cpp )

file( COPY a.md
	DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )
file( COPY b.md
	DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )
file( COPY a.png
	DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )
file( COPY a.jpg
	DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )
file( COPY b.png
	DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )

file( COPY test1.md
	DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )
file( COPY test2.md
	DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )
file( COPY test3.md
	DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )
file( COPY test4.md
	DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )
file( COPY test5.md
	DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )
file( COPY test6.md
	DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )
file( COPY test7.md
	DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )
file( COPY test8.md
	DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )
file( COPY test9.md
	DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )
file( COPY test10.md
	DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )
file( COPY test11.md
	DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )
file( COPY test12.md
	DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )
file( COPY test13.md
	DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )
file( COPY test17.md
	DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )
file( COPY test18.md
	DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )
file( COPY test19.md
	DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )
file( COPY test20.md
	DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )
file( COPY test21.md
	DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )
file( COPY test22.md
	DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )
file( COPY test23.md
	DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )
file( COPY test24.md
	DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )
file( COPY test25.md
	DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )
file( COPY test26.md
	DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )
file( COPY test27.md
	DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )
file( COPY test28.md
	DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )
file( COPY test29.md
	DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )
file( COPY test30.md
	DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )
file( COPY test31.md
	DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )
file( COPY test32.md
	DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )
file( COPY test33.md
	DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )
file( COPY test34.md
	DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )
file( COPY test35.md
	DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )
file( COPY test36.md
	DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )
file( COPY test37.md
	DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )
file( COPY test38.md
	DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )
file( COPY test39.md
	DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )
file( COPY test40.md
	DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )
file( COPY test41.md
	DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )
file( COPY test42.md
	DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )
file( COPY test42-1.md
	DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )
file( COPY test44.md
	DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )
file( COPY test45.md
	DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )
file( COPY test46.md
	DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )
file( COPY test47.md
	DESTINATION ${CMAKE_CURRENT_BINARY_DIR} )

include_directories( ${CMAKE_CURRENT_SOURCE_DIR}
	${CMAKE_CURRENT_SOURCE_DIR}/../../..
	${CMAKE_CURRENT_SOURCE_DIR}/../../../3rdparty )

link_directories( ${CMAKE_CURRENT_SOURCE_DIR}/../../../lib )

add_executable( test.md_parser ${SRC} )

target_link_libraries( test.md_parser md-parser Qt5::Core )

add_test( NAME test.md_parser
	COMMAND ${CMAKE_CURRENT_BINARY_DIR}/test.md_parser
	WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR} )
